--- a/release.json
+++ b/release.json
@@ -1,15 +1,15 @@
 {
 	"major_release": "iOS 1",
-	"release": "iOS 1.1.2",
+	"release": "iOS 1.1.3",
 	"projects": [
 		{
 			"project": "JavaScriptCore",
-			"tag": "JavaScriptCore-3B48",
+			"tag": "JavaScriptCore-4A93",
 			"updated": true
 		},
 		{
 			"project": "WebCore",
-			"tag": "WebCore-3B48",
+			"tag": "WebCore-4A93",
 			"updated": true
 		}
 	]
