--- a/release.json
+++ b/release.json
@@ -1,30 +1,30 @@
 {
-	"major_release": "iOS 2",
-	"release": "iOS 2.0",
+	"major_release": "iOS 3",
+	"release": "iPhone 3.0",
 	"projects": [
 		{
 			"project": "JavaScriptCore",
-			"tag": "JavaScriptCore-461"
+			"tag": "JavaScriptCore-521"
 		},
 		{
 			"project": "WebCore",
-			"tag": "WebCore-332"
+			"tag": "WebCore-514"
 		},
 		{
 			"project": "cctools",
-			"tag": "cctools-667.8.0"
+			"tag": "cctools-751"
 		},
 		{
 			"project": "gcc",
-			"tag": "gcc-5484"
+			"tag": "gcc-5572.10.2"
 		},
 		{
 			"project": "gdb",
-			"tag": "gdb-961"
+			"tag": "gdb-1119"
 		},
 		{
 			"project": "gnumake",
-			"tag": "gnumake-119"
+			"tag": "gnumake-126.1"
 		},
 		{
 			"project": "keymgr",
@@ -32,11 +32,7 @@
 		},
 		{
 			"project": "ld64",
-			"tag": "ld64-84.1.2"
-		},
-		{
-			"project": "libgcc",
-			"tag": "libgcc-8.1"
+			"tag": "ld64-95.8.4"
 		},
 		{
 			"project": "libiconv",
@@ -44,7 +40,7 @@
 		},
 		{
 			"project": "libstdcxx",
-			"tag": "libstdcxx-5.1.0.7"
+			"tag": "libstdcxx-37.11"
 		}
 	]
 }
