--- a/release.json
+++ b/release.json
@@ -1,6 +1,6 @@
 {
 	"major_release": "iOS 3",
-	"release": "iPhone 3.1.2",
+	"release": "iPhone 3.1.3",
 	"projects": [
 		{
 			"project": "JavaScriptCore",
@@ -8,7 +8,8 @@
 		},
 		{
 			"project": "WebCore",
-			"tag": "WebCore-528.14"
+			"tag": "WebCore-528.15",
+			"updated": true
 		},
 		{
 			"project": "cctools",
