--- a/release.json
+++ b/release.json
@@ -1,6 +1,6 @@
 {
 	"major_release": "iOS 4",
-	"release": "iOS 4.3.1",
+	"release": "iOS 4.3.2",
 	"projects": [
 		{
 			"project": "JavaScriptCore",
@@ -8,7 +8,8 @@
 		},
 		{
 			"project": "WebCore",
-			"tag": "WebCore-955.66"
+			"tag": "WebCore-955.66.1",
+			"updated": true
 		},
 		{
 			"project": "cctools",
