--- a/.gitmodules
+++ b/.gitmodules
@@ -4,12 +4,18 @@
 [submodule "WebCore"]
 	path = WebCore
 	url = https://github.com/apple-oss-distributions/WebCore
-[submodule "ld64"]
-	path = ld64
-	url = https://github.com/apple-oss-distributions/ld64
 [submodule "WTFEmbedded"]
 	path = WTFEmbedded
 	url = https://github.com/apple-oss-distributions/WTFEmbedded
 [submodule "libiconv"]
 	path = libiconv
 	url = https://github.com/apple-oss-distributions/libiconv
+[submodule "WTF"]
+	path = WTF
+	url = https://github.com/apple-oss-distributions/WTF
+[submodule "WebKit"]
+	path = WebKit
+	url = https://github.com/apple-oss-distributions/WebKit
+[submodule "WebKit2"]
+	path = WebKit2
+	url = https://github.com/apple-oss-distributions/WebKit2
