--- a/release.json
+++ b/release.json
@@ -1,26 +1,30 @@
 {
-	"major_release": "iOS 7",
-	"release": "iOS 7.0",
+	"major_release": "iOS 8",
+	"release": "iOS 8.0",
 	"projects": [
 		{
 			"project": "JavaScriptCore",
-			"tag": "JavaScriptCore-1218"
+			"tag": "JavaScriptCore-7600.1.4.9"
 		},
 		{
-			"project": "WTFEmbedded",
-			"tag": "WTFEmbedded-95"
+			"project": "WTF",
+			"tag": "WTF-7600.1.4.9"
 		},
 		{
 			"project": "WebCore",
-			"tag": "WebCore-1889.1"
+			"tag": "WebCore-7600.1.4.10"
 		},
 		{
-			"project": "ld64",
-			"tag": "ld64-224.1"
+			"project": "WebKit",
+			"tag": "WebKit-7600.1.4.9"
+		},
+		{
+			"project": "WebKit2",
+			"tag": "WebKit2-7600.1.4.9"
 		},
 		{
 			"project": "libiconv",
-			"tag": "libiconv-41"
+			"tag": "libiconv-42"
 		}
 	]
 }
