--- a/release.json
+++ b/release.json
@@ -1,27 +1,30 @@
 {
 	"major_release": "iOS 8",
-	"release": "iOS 8.0.1",
+	"release": "iOS 8.1",
 	"projects": [
 		{
 			"project": "JavaScriptCore",
-			"tag": "JavaScriptCore-7600.1.4.9"
+			"tag": "JavaScriptCore-7600.1.4.11.8",
+			"updated": true
 		},
 		{
 			"project": "WTF",
-			"tag": "WTF-7600.1.4.9"
+			"tag": "WTF-7600.1.4.11.8",
+			"updated": true
 		},
 		{
 			"project": "WebCore",
-			"tag": "WebCore-7600.1.4.10"
+			"tag": "WebCore-7600.1.4.11.12",
+			"updated": true
 		},
 		{
 			"project": "WebKit",
-			"tag": "WebKit-7600.1.4.10.1",
+			"tag": "WebKit-7600.1.4.11.10",
 			"updated": true
 		},
 		{
 			"project": "WebKit2",
-			"tag": "WebKit2-7600.1.4.10.1",
+			"tag": "WebKit2-7600.1.4.11.10",
 			"updated": true
 		},
 		{
