--- a/release.json
+++ b/release.json
@@ -1,30 +1,31 @@
 {
 	"major_release": "iOS 9",
-	"release": "iOS 9.0",
+	"release": "iOS 9.1",
 	"projects": [
 		{
 			"project": "JavaScriptCore",
-			"tag": "JavaScriptCore-7601.1.46.3"
+			"tag": "JavaScriptCore-7601.1.46.22",
+			"updated": true
 		},
 		{
 			"project": "WTF",
-			"tag": "WTF-7601.1.46.3"
+			"tag": "WTF-7601.1.46.22",
+			"updated": true
 		},
 		{
 			"project": "WebCore",
-			"tag": "WebCore-7601.1.46.10"
+			"tag": "WebCore-7601.1.46.25.1",
+			"updated": true
 		},
 		{
 			"project": "WebKit",
-			"tag": "WebKit-7601.1.46.9"
+			"tag": "WebKit-7601.1.46.25.2",
+			"updated": true
 		},
 		{
 			"project": "WebKit2",
-			"tag": "WebKit2-7601.1.46.9"
-		},
-		{
-			"project": "ld64",
-			"tag": "ld64-253.3"
+			"tag": "WebKit2-7601.1.46.25.2",
+			"updated": true
 		},
 		{
 			"project": "libiconv",
