--- a/release.json
+++ b/release.json
@@ -1,36 +1,35 @@
 {
 	"major_release": "iOS 11",
-	"release": "iOS 11.3",
+	"release": "iOS 11.4",
 	"projects": [
 		{
 			"project": "JavaScriptCore",
-			"tag": "JavaScriptCore-7605.1.33.0.2",
+			"tag": "JavaScriptCore-7605.2.8.0.1",
 			"updated": true
 		},
 		{
 			"project": "WTF",
-			"tag": "WTF-7605.1.33.0.2",
+			"tag": "WTF-7605.2.8.0.1",
 			"updated": true
 		},
 		{
 			"project": "WebCore",
-			"tag": "WebCore-7605.1.33.0.2",
+			"tag": "WebCore-7605.2.8.0.1",
 			"updated": true
 		},
 		{
 			"project": "WebKit",
-			"tag": "WebKit-7605.1.33.0.2",
+			"tag": "WebKit-7605.2.8.0.1",
 			"updated": true
 		},
 		{
 			"project": "WebKit2",
-			"tag": "WebKit2-7605.1.33.0.2",
+			"tag": "WebKit2-7605.2.8.0.1",
 			"updated": true
 		},
 		{
 			"project": "libiconv",
-			"tag": "libiconv-51.50.1",
-			"updated": true
+			"tag": "libiconv-51.50.1"
 		}
 	]
 }
