--- a/release.json
+++ b/release.json
@@ -1,26 +1,31 @@
 {
 	"major_release": "iOS 12",
-	"release": "iOS 12.0",
+	"release": "iOS 12.1",
 	"projects": [
 		{
 			"project": "JavaScriptCore",
-			"tag": "JavaScriptCore-7606.1.36.0.3"
+			"tag": "JavaScriptCore-7606.2.104.0.1",
+			"updated": true
 		},
 		{
 			"project": "WTF",
-			"tag": "WTF-7606.1.36.0.3"
+			"tag": "WTF-7606.2.104.0.1",
+			"updated": true
 		},
 		{
 			"project": "WebCore",
-			"tag": "WebCore-7606.1.36.0.3"
+			"tag": "WebCore-7606.2.104.0.1",
+			"updated": true
 		},
 		{
 			"project": "WebKit",
-			"tag": "WebKit-7606.1.36.0.3"
+			"tag": "WebKit-7606.2.104.0.1",
+			"updated": true
 		},
 		{
 			"project": "WebKit2",
-			"tag": "WebKit2-7606.1.36.0.3"
+			"tag": "WebKit2-7606.2.104.0.1",
+			"updated": true
 		},
 		{
 			"project": "libiconv",
