--- a/release.json
+++ b/release.json
@@ -1,26 +1,31 @@
 {
 	"major_release": "iOS 14",
-	"release": "iOS 14.0",
+	"release": "iOS 14.2",
 	"projects": [
 		{
 			"project": "JavaScriptCore",
-			"tag": "JavaScriptCore-7610.1.28.0.5"
+			"tag": "JavaScriptCore-7610.2.11.0.1",
+			"updated": true
 		},
 		{
 			"project": "WTF",
-			"tag": "WTF-7610.1.28.0.5"
+			"tag": "WTF-7610.2.11.0.1",
+			"updated": true
 		},
 		{
 			"project": "WebCore",
-			"tag": "WebCore-7610.1.28.0.5"
+			"tag": "WebCore-7610.2.11.0.1",
+			"updated": true
 		},
 		{
 			"project": "WebKit",
-			"tag": "WebKit-7610.1.28.0.5"
+			"tag": "WebKit-7610.2.11.0.1",
+			"updated": true
 		},
 		{
 			"project": "WebKit2",
-			"tag": "WebKit2-7610.1.28.0.5"
+			"tag": "WebKit2-7610.2.11.0.1",
+			"updated": true
 		},
 		{
 			"project": "libiconv",
