--- a/release.json
+++ b/release.json
@@ -1,14 +1,16 @@
 {
 	"major_release": "iOS 15",
-	"release": "iOS 15.0",
+	"release": "iOS 15.1.1",
 	"projects": [
 		{
 			"project": "WebKit",
-			"tag": "WebKit-7612.1.27.0.31"
+			"tag": "WebKit-7612.2.9.0.20",
+			"updated": true
 		},
 		{
 			"project": "libiconv",
-			"tag": "libiconv-59"
+			"tag": "libiconv-61",
+			"updated": true
 		}
 	]
 }
